
pkgincludedir = $(includedir)/elfpp

pkginclude_HEADERS = access elfpp_access.hh elfpp_access.hxx			\
	elfpp_bits.hh elfpp.hh elfpp_object.hh elfpp_object.hxx			\
	elfpp_reloc.hh elfpp_reloc.hxx elfpp_segment.hh				\
	elfpp_segment.hxx elfpp_section.hh elfpp_section.hxx			\
	elfpp_symbol.hh elfpp_symbol.hxx object reloc section symbol segment

